# uva-problems

./: CMakeLists.txt  README.md  test.sh
src/: 10003.cpp  10006.cpp  10018.cpp  10030.cpp  10035.cpp  10038.cpp  10041.cpp  10055.cpp  10066.cpp  10071.cpp  10079.cpp  10082.cpp  10090.cpp  10098.cpp  10104.cpp  10127.cpp  10131.cpp  10192.cpp  102.cpp  10252.cpp  10305.cpp  10327.cpp  10340.cpp  10346.cpp  10370.cpp  10405.cpp  10407.cpp  10420.cpp  10608.cpp  10633.cpp  10673.cpp  10680.cpp  10684.cpp  10696.cpp  10699.cpp  10773.cpp  10783.cpp  108.cpp  10812.cpp  10892.cpp  (+58 more)
test/: 10003.in  10003.out  10942.in  10942.out  112.in  112.out  116.in  116.out  1586.in  946.in
